Adjusted the margin-bottom of the inner-text-body to ensure the footer within the main container is further below. Furthermore, adjusted the alignment of the inner-text-footer within the footer of the main container so that it is more closely aligned with the avatar icon.

--- a/styles.scss
+++ b/styles.scss
@@ -36,6 +36,7 @@ body {
     }
     .text-body {
         margin: .5rem;
+        margin-bottom: 2rem;
 
         h1.inner-text {
             margin: 1rem;
@@ -63,6 +64,8 @@ body {
     .inner-text-footer {
         display: flex;
         flex-direction: column;
+        position: relative;
+        right: 1.5rem;
     }
 }
 .img-container {
